--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -2,10 +2,11 @@
 <section class="hero">
     <div class="container hero__container">
 
-        
-        <div class="hero__ice-cream">
+        <div class="elipse"></div>
 
-            <picture>
+        <div >
+
+            <picture class="hero__ice-cream">
                 <source srcset="./images/png/hero/descktop/icecream.png 1x, ./images/png/hero/descktop/icecream@2x.png 2x"
                     media="(min-width:1280px)">
             
@@ -15,7 +16,7 @@
                 <source srcset="./images/png/hero/mobile/icecream.png 1x, ./images/png/hero/mobile/icecream@2x.png 2x"
                     media="(max-width: 767px)">
             
-                <img class="hero__ice-cream" src="./images/png/hero/mobile/icecream.png" alt="">
+                <img  src="./images/png/hero/mobile/icecream.png" alt="">
             </picture>
         </div>
 
