--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -22,7 +22,7 @@
       width: 324px;
       height: 322px;
       top: 31px;
-      left: 307px;
+      left: 304px;
     }
 }
 
@@ -33,27 +33,27 @@
   background-color: $accent-rose-color;
 
 
-   background-image:
-  url('/../src/images/ellipse.png');
-  background-repeat: no-repeat;
-  background-position:right;
+  //  background-image:
+  // url('/../src/images/ellipse.png');
+  // background-repeat: no-repeat;
+  // background-position:right;
   @media screen and(min-width:$tablet) {
     width: 100%;
     max-width: 1279px;
-    height: 407px;
-     background-image: 
-     url('/../src/images/Ellipse.t.png');
-  background-repeat: no-repeat;
-  background-position:top 31px right 137px;
+    height: 399px;
+  //    background-image: 
+  //    url('/../src/images/Ellipse.t.png');
+  // background-repeat: no-repeat;
+  // background-position:top 31px right 137px;
   }
   @media screen and(min-width:$desktop) {
     width: 100%;
     
     height: 665px;
-     background-image: 
-     url('/../src/images/Ellipse.t.png');
-  background-repeat: no-repeat;
-  background-position:top 31px right 137px;
+  //    background-image: 
+  //    url('/../src/images/Ellipse.t.png');
+  // background-repeat: no-repeat;
+  // background-position:top 31px right 137px;
   }
 
   
@@ -227,31 +227,57 @@
     
   }
   &__round-btn{
+    display: none;
+    @media screen and (min-width:$tablet) {
       position: absolute;
-      top: 583px;
-      left: 294px;
       display: block;
-      width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: $white-color;
-    color: $accent-red-color;
+      width: 18px;
+      height: 18px;
+      top: 347px;
+      left: 154px;
+      border-radius: 50%;
+      margin-left: auto;
+      margin-right: auto;
+      background-color: $white-color;
+      color: $accent-red-color;
+    }
+
+    @media screen and (min-width:$desktop) {
+      position: absolute;
+      display: block;
+      width: 18px;
+      height: 18px;
+      top: 347px;
+      left: 294px;
+      border-radius: 50%;
+      margin-left: auto;
+      margin-right: auto;
+      background-color: $white-color;
+      color: $accent-red-color;
+     }
+      
     }
   &__lorem{
     display: none;
-    @media screen and(min-width:$desktop){
+    @media screen and (min-width:$tablet){
       display: block;
-    position: absolute;
+      position: absolute;
+      width: 114px;
+      height: 48px;
+      top: 292px;
+      left: 154px;
+      font-weight: 400;
+      font-size: 8px;
+      line-height: 1.5;
+      color: $white-color;
+    }
+    @media screen and(min-width:$desktop){
     top: 485px;
     left: 294px;
     width: 200px;
     height: 78px;
-    font-weight: 400;
     font-size: 14px;
     line-height: 20px;
-    color: $white-color;
     }
   }
   &__cafes{
