--- a/src/sass/layout/_page-header.scss
+++ b/src/sass/layout/_page-header.scss
@@ -22,15 +22,15 @@
     width: 20px;
     height: 12px;
     border-radius: 0%;
-    @media screen and(min-width:$tablet){
-     margin-left: 291px;
-    margin-right: 30px;
+    // @media screen and(min-width:$tablet){
+    //  margin-left: 291px;
+    // margin-right: 30px;
     @media screen and(min-width:$desktop){
       display: none;
     }
     }
    
-  }
+  
   &__icon {
     width: 22px;
     height: 12px;
@@ -77,6 +77,7 @@
     width: 209px;
     height: 44px;
     padding: 0 49px;
+    margin-left: auto;
     margin-bottom: 19px;
     border-radius: 22px;
     background: $white-color;
@@ -147,3 +148,8 @@
   }
 }
 
+.logo {
+  @media screen and (min-width:$tablet){
+    margin-right: 291px;
+  }
+}
