добавил ID для якоря в секцию

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,4 +1,4 @@
-<article class="products">
+<article class="products" id="product">
   <div class="container">
     <p class="products__appeal">100% natural</p>
 <h2 class="products__title">products</h2>
