--- a/src/partials/customer_reviews.html
+++ b/src/partials/customer_reviews.html
@@ -1,28 +1,47 @@
-        congue. Lorem ipsum primis in nibh vel risus.</p>
-        <div class="customer-reviews__scroll-dots">
-                                    <svg class="scroll-dot" width="4" height="4">
-                                        <use href="./images/sprite.svg#point"></use>
-                                    </svg>
-                                    <svg class="scroll-dot" width="4" height="4">
-                                        <use href="./images/sprite.svg#point"></use>
-                                    </svg>
-                                    <svg class="scroll-dot" width="4" height="4">
-                                        <use href="./images/sprite.svg#point"></use>
-                                    </svg>
-                                    </div>
-        <p  class="customer-reviews__text-about">Emily, Los Angeles</p>
+<section class="customer-reviews">
+    <div class="container">
+        <div class="customer-reviews__wrapper">
+            <h2 class="customer-reviews__heading">Customer-reviews</h2>
+            <picture class="customer-reviews__photo">
+                <source srcset="
+                        ../src/images/customer-reviews/black-girl.webp   1x,
+                        ../src/images/customer-reviews/black-girl@2x.webp 2x
+                      " media="(min-width: 1200px)" type="image/webp" />
+                <source srcset="
+                        ../src/images/customer-reviews/black-girl.png   1x,
+                        ../src/images/customer-reviews/black-girl@2x.png 2x
+                      " media="(min-width: 1200px)" />
+                <img class="custumer-reviews__images" src="../src/images/customer-reviews/black-girl.png"
+                    alt="Black-girl" />
+            </picture>
+            <div class="customer-reviews__text">
+                <p class="customer-reviews__text-review">Nullam viverra consectetuer. Quisque cursus et, porttitor
+                    risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan
+                    congue. Lorem ipsum primis in nibh vel risus.</p>
+                <div class="customer-reviews__scroll-dots">
+                    <svg class="scroll-dot" width="4" height="4">
+                        <use href="./images/sprite.svg#point"></use>
+                    </svg>
+                    <svg class="scroll-dot" width="4" height="4">
+                        <use href="./images/sprite.svg#point"></use>
+                    </svg>
+                    <svg class="scroll-dot" width="4" height="4">
+                        <use href="./images/sprite.svg#point"></use>
+                    </svg>
+                </div>
+                <p class="customer-reviews__text-about">Emily, Los Angeles</p>
+            </div>
+            <div class="customers-review__page-dots">
+                <svg class="page-dot__home" width="12" height="12">
+                    <use href="./images/sprite.svg#home"></use>
+                </svg>
+                <svg class="page-dot" width="12" height="12">
+                    <use href="./images/sprite.svg#point"></use>
+                </svg>
+                <svg class="page-dot" width="12" height="12">
+                    <use href="./images/sprite.svg#point"></use>
+                </svg>
+            </div>
+        </div>
     </div>
-    <div class="customers-review__page-dots">
-                                            <svg class="page-dot__home" width="12" height="12">
-                                                <use href="./images/sprite.svg#home"></use>
-                                            </svg>
-                                            <svg class="page-dot" width="12" height="12">
-                                                <use href="./images/sprite.svg#point"></use>
-                                            </svg>
-                                            <svg class="page-dot" width="12" height="12">
-                                                <use href="./images/sprite.svg#point"></use>
-                                            </svg>
-    </div>
-    </div>
-    </div>
-    </section>
+</section>
