--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -1,7 +1,8 @@
 .container {
   width: 100%;
   margin: 0 auto;
-  padding: 20px;
+  padding-right: 20px;
+  padding-left: 20px;
 
   @media screen and (min-width: 480px) {
     width: 480px;
