ред стилей модалок

--- a/src/partials/modal2.html
+++ b/src/partials/modal2.html
@@ -1,9 +1,12 @@
 <!--Modal-footer1-->
 <div id="myModal" class="modal-fade backdrop is-hidden" data-modal2>
-    <button class="modal-close-button2" data-modal-close2><span class="icon-close">&#10006</span>
+ <div class="modal">
+    <button class="modal-close-button" data-modal-close2><span class="icon-close">&#10006</span>
     </button>
-    <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2541.7792674117795!2d30.536191751258688!3d50.426584096864715!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4d96f5139689b%3A0xa1f7c65300bebad1!2sGoIT!5e0!3m2!1sru!2sua!4v1615648063671!5m2!1sru!2sua"
-        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>    
+    <div  >
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1270.912352941552!2d30.535324926071013!3d50.425737553619285!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4d96f5139689b%3A0xa1f7c65300bebad1!2sGoIT!5e0!3m2!1sru!2sua!4v1615808039244!5m2!1sru!2sua" 
+        width="440" height="490" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    </div>      
+ </div>
 </div>
 
