--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -1951,6 +1951,10 @@ li {
   z-index: 2;
   font-size: 12px;
   line-height: 2.55;
+  display: inline;
+  background-repeat: no-repeat;
+  background-size: 100% 1px;
+  background-image: repeating-linear-gradient(to right, #e1e1e1, #e1e1e1);
 }
 
 @media screen and (min-width: 768px) {
@@ -2007,7 +2011,7 @@ li {
   width: 32px;
   height: 4px;
   fill: #c7133e;
-  top: 312px;
+  top: 272px;
   left: 50%;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
@@ -2876,7 +2880,6 @@ li {
   max-width: 450px;
   max-height: 609px;
   padding: 40px;
-  overflow: scroll;
   background-color: #fff5f6;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -2904,8 +2907,8 @@ li {
 .modal-close-button {
   position: absolute;
   right: 0;
-  margin-top: 8px;
-  margin-right: 8px;
+  margin-top: -30px;
+  margin-right: 10px;
   width: 30px;
   height: 30px;
   padding: 6px;
@@ -2916,8 +2919,9 @@ li {
           box-sizing: border-box;
 }
 
-.modal-close-button:hover {
-  color: #ffa5ba;
+.modal-close-button:hover,
+.modal-close-button:focus {
+  background-color: #e18298;
   cursor: pointer;
 }
 
@@ -2933,7 +2937,7 @@ li {
 
 .form-field label {
   margin-bottom: 4px;
-  font-size: 12px;
+  font-size: 14px;
   line-height: 1.16;
   color: #ffa5ba;
 }
@@ -3007,7 +3011,11 @@ textarea::placeholder {
   display: inline-flex;
   font-size: 14px;
   line-height: 1.71;
-  color: #000000;
+  color: #ffb8ca;
+}
+
+.terms:hover, .terms:focus {
+  color: #e17992;
 }
 
 .modal-submit {
@@ -3062,10 +3070,43 @@ textarea::placeholder {
   color: #d41443;
 }
 
+.modal-input {
+  outline: none;
+  width: 100%;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 4px;
+  padding-top: 11px;
+  padding-bottom: 11px;
+  padding-left: 42px;
+  -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input:hover, .modal-input:focus {
+  border-color: #d41443;
+  cursor: pointer;
+}
+
 .modal-icon {
   position: absolute;
   top: 50%;
   left: 12px;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  pointer-events: none;
+  fill: #e18298;
+  width: 20px;
+  height: 20px;
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input:hover + .modal-icon,
+.modal-input:focus + .modal-icon {
+  fill: #d41443;
+  cursor: pointer;
 }
 
 .form-field input:focus,
@@ -3114,7 +3155,7 @@ input:focus + .modal-icon {
   width: 16px;
   height: 15px;
   margin-right: 8px;
-  border: 2px solid var(--dark-background-color);
+  border: 2px solid #ffa5ba;
   border-radius: 2px;
 }
 
