solved problem with pics

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -5,48 +5,45 @@
     <h2 class="title">Products</h2>
     <ul class="products-list list">
       <li class="products-list-item ice-cream">
-        <div class="products-content">
-          <h3 class="products-item-title">Ice cream</h3>
-          <p class="products-item-text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et
-          </p>
+        <h3 class="products-item-title">Ice cream</h3>
+        <div class="products-dots"></div>
+        <p class="products-item-text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et
+        </p>
 
-          <button class="products-btn" type="button">
-            <svg class="button-icon">
-              <use href="./images/products/icon-arrow.svg#icon-arrow"></use>
-            </svg>
-          </button>
-        </div>
+        <button class="products-btn" type="button">
+          <svg class="button-icon">
+            <use href="./images/products/icon-arrow.svg#icon-arrow"></use>
+          </svg>
+        </button>
       </li>
       <li class="products-list-item ice-coffee">
-        <div class="products-content">
-          <h3 class="products-item-title">Ice coffee</h3>
-          <p class="products-item-text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et
-          </p>
-          <button class="products-btn" type="button">
-            <svg class="button-icon">
-              <use href="./images/products/icon-arrow.svg#icon-arrow"></use>
-            </svg>
-          </button>
-        </div>
+        <h3 class="products-item-title">Ice coffee</h3>
+        <div class="products-dots"></div>
+        <p class="products-item-text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et
+        </p>
+        <button class="products-btn" type="button">
+          <svg class="button-icon">
+            <use href="./images/products/icon-arrow.svg#icon-arrow"></use>
+          </svg>
+        </button>
       </li>
 
       <li class="products-list-item milkshake">
-        <div class="products-content">
-          <h3 class="products-item-title">Milkshakes</h3>
-          <p class="products-item-text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et
-          </p>
-          <button class="products-btn" type="button">
-            <svg class="button-icon">
-              <use href="./images/products/icon-arrow.svg#icon-arrow"></use>
-            </svg>
-          </button>
-        </div>
+        <h3 class="products-item-title">Milkshakes</h3>
+        <div class="products-dots"></div>
+        <p class="products-item-text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et
+        </p>
+        <button class="products-btn" type="button">
+          <svg class="button-icon">
+            <use href="./images/products/icon-arrow.svg#icon-arrow"></use>
+          </svg>
+        </button>
       </li>
     </ul>
   </div>
