--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -15,8 +15,7 @@
 .products-container {
   display: flex;
   flex-direction: column;
-  padding-left: 34px;
-  padding-right: 34px;
+  align-items: center;
 }
 
 .subtitle {
@@ -58,9 +57,11 @@
 .products-list {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  align-items: center;
+
   @media screen and (min-width: 768px) {
     flex-direction: row;
+
     margin: -10px;
   }
   @media screen and (min-width: 1200px) {
@@ -71,25 +72,23 @@
 .products-list-item {
   position: relative;
 
-  display: flex;
-
-  margin: 0px auto;
   max-width: 280px;
-  max-height: 485px;
+  height: 485px;
 
   padding-top: 161px;
   padding-right: 44px;
   padding-left: 44px;
   padding-bottom: 40px;
   border-radius: 24px;
+  text-align: center;
 
   @media screen and (max-width: 767px) {
-    margin-bottom: 17px;
+    &:not(:last-child) {
+      margin-bottom: 130px;
+    }
   }
 
   @media screen and (min-width: 768px) {
-    width: calc((100% - 3 * 20px) / 3);
-    margin: 10px;
     width: 220px;
     height: 485px;
 
@@ -97,10 +96,12 @@
     padding-right: 11px;
     padding-left: 11px;
     padding-bottom: 40px;
+    &:not(:last-child) {
+      margin-right: 20px;
+      margin-bottom: 0;
+    }
   }
   @media screen and (min-width: 1200px) {
-    width: calc((100% - 3 * 30px) / 3);
-    margin: 15px;
     width: 329px;
     height: 525px;
 
@@ -108,6 +109,10 @@
     padding-right: 44px;
     padding-left: 44px;
     padding-bottom: 50px;
+    &:not(:last-child) {
+      margin-right: 30px;
+      margin-bottom: 0;
+    }
   }
   &:nth-child(1) {
     background: $ellipse-background-color;
@@ -125,19 +130,22 @@
   text-transform: uppercase;
   color: $text-color;
   font-family: $title-text-font;
-  margin-bottom: 66px;
+  margin-bottom: 30px;
 
   @include font($fs: 20px, $fw: 400, $lh: 23px, $ls: 0.04em);
 
   @media screen and (min-width: 1200px) {
     @include font($fs: 30px, $fw: 400, $lh: 34px, $ls: 0.04em);
-    margin-bottom: 70px;
+    margin-bottom: 32px;
   }
 }
 .products-item-text {
   position: relative;
   text-align: center;
   color: $text-color;
+  max-width: 200px;
+  margin-left: auto;
+  margin-right: auto;
   margin-bottom: 30px;
   @include font($fs: 14px, $fw: 700, $lh: 21px, $ls: 0.04em);
 
@@ -150,20 +158,37 @@
     @include font($fs: 16px, $fw: 700, $lh: 28px, $ls: 0.04em);
     margin-bottom: 62px;
   }
-  &::before {
+}
+.products-dots {
+  position: relative;
+  margin-bottom: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: $btn-background-color;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 32px;
+  }
+
+  &::before,
+  &::after {
     position: absolute;
     content: '';
-
-    top: -30px;
-    left: 50%;
-    transform: translateX(-50%) translateY(100%);
-
-    width: 26px;
+    display: block;
+    background-color: $btn-background-color;
+    width: 6px;
     height: 6px;
-    background-position: center;
-    background-repeat: no-repeat;
-    fill: $btn-background-color;
-    background-image: url(../images/products/points.svg);
+    border-radius: 50%;
+  }
+  &::before {
+    right: 10px;
+  }
+
+  &::after {
+    left: 10px;
   }
 }
 
@@ -210,16 +235,16 @@
     height: 252px;
     background-image: url(../images/products/mobile/ice-cream.png);
     background-repeat: no-repeat;
-  }
-  @media screen and (min-device-pixel-ratio: 2),
-    screen and (min-resolution: 192dpi),
-    screen and (min-resolution: 2dppx) {
-    &::before {
-      background-size: contain;
+    background-size: contain;
+
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
       background-image: url(../images/products/mobile/ice-cream@2.png);
     }
   }
 }
+
 .ice-coffee {
   &::before {
     content: '';
@@ -233,16 +258,16 @@
     height: 252px;
     background-image: url(../images/products/mobile/ice-coffee.png);
     background-repeat: no-repeat;
-  }
-  @media screen and (min-device-pixel-ratio: 2),
-    screen and (min-resolution: 192dpi),
-    screen and (min-resolution: 2dppx) {
-    &::before {
-      background-size: contain;
+    background-size: contain;
+
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
       background-image: url(../images/products/mobile/ice-coffee@2.png);
     }
   }
 }
+
 .milkshake {
   &::before {
     content: '';
@@ -256,134 +281,130 @@
     height: 252px;
     background-image: url(../images/products/mobile/milkshake.png);
     background-repeat: no-repeat;
-  }
-  @media screen and (min-device-pixel-ratio: 2),
-    screen and (min-resolution: 192dpi),
-    screen and (min-resolution: 2dppx) {
-    &::before {
-      background-size: contain;
+    background-size: contain;
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
       background-image: url(../images/products/mobile/milkshake@2.png);
     }
   }
 }
-.ice-cream {
-  &::before {
-    content: '';
-    position: absolute;
-    top: -104px;
-
-    width: 220px;
-    height: 233px;
-    background-image: url(../images/products/mobile/ice-cream.png);
-    background-repeat: no-repeat;
-  }
-  @media screen and (min-device-pixel-ratio: 2),
-    screen and (min-resolution: 192dpi),
-    screen and (min-resolution: 2dppx) {
+@media screen and (min-width: 768px) {
+  .ice-cream {
     &::before {
+      content: '';
+      position: absolute;
+      top: -104px;
+
+      width: 220px;
+      height: 233px;
+      background-image: url(../images/products/mobile/ice-cream.png);
+      background-repeat: no-repeat;
       background-size: contain;
-      background-image: url(../images/products/mobile/ice-cream@2.png);
+      @media screen and (min-device-pixel-ratio: 2),
+        screen and (min-resolution: 192dpi),
+        screen and (min-resolution: 2dppx) {
+        background-image: url(../images/products/mobile/ice-cream@2.png);
+      }
+    }
+  }
+
+  .ice-coffee {
+    &::before {
+      content: '';
+      position: absolute;
+      top: -104px;
+
+      width: 220px;
+      height: 233px;
+      background-image: url(../images/products/mobile/ice-coffee.png);
+      background-repeat: no-repeat;
+      background-size: contain;
+      @media screen and (min-device-pixel-ratio: 2),
+        screen and (min-resolution: 192dpi),
+        screen and (min-resolution: 2dppx) {
+        background-image: url(../images/products/mobile/ice-coffee@2.png);
+      }
+    }
+  }
+
+  .milkshake {
+    &::before {
+      content: '';
+      position: absolute;
+      top: -104px;
+
+      width: 220px;
+      height: 233px;
+      background-image: url(../images/products/mobile/milkshake.png);
+      background-repeat: no-repeat;
+      background-size: contain;
+      @media screen and (min-device-pixel-ratio: 2),
+        screen and (min-resolution: 192dpi),
+        screen and (min-resolution: 2dppx) {
+        background-image: url(../images/products/mobile/milkshake@2.png);
+      }
     }
   }
 }
-.ice-coffee {
-  &::before {
-    content: '';
-    position: absolute;
-    top: -104px;
-
-    width: 220px;
-    height: 233px;
-    background-image: url(../images/products/mobile/ice-coffee.png);
-    background-repeat: no-repeat;
-  }
-  @media screen and (min-device-pixel-ratio: 2),
-    screen and (min-resolution: 192dpi),
-    screen and (min-resolution: 2dppx) {
+@media screen and (min-width: 1200px) {
+  .ice-cream {
     &::before {
+      content: '';
+      position: absolute;
+      top: -210px;
+
+      width: 335px;
+      height: 335px;
+      background-image: url(../images/products/mobile/ice-cream.png);
+      background-repeat: no-repeat;
       background-size: contain;
-      background-image: url(../images/products/mobile/ice-coffee@2.png);
+
+      @media screen and (min-device-pixel-ratio: 2),
+        screen and (min-resolution: 192dpi),
+        screen and (min-resolution: 2dppx) {
+        background-image: url(../images/products/mobile/ice-cream@2.png);
+      }
     }
   }
-}
-.milkshake {
-  &::before {
-    content: '';
-    position: absolute;
-    top: -104px;
 
-    width: 220px;
-    height: 233px;
-    background-image: url(../images/products/mobile/milkshake.png);
-    background-repeat: no-repeat;
-  }
-  @media screen and (min-device-pixel-ratio: 2),
-    screen and (min-resolution: 192dpi),
-    screen and (min-resolution: 2dppx) {
+  .ice-coffee {
     &::before {
+      content: '';
+      position: absolute;
+      top: -210px;
+
+      width: 335px;
+      height: 335px;
+      background-image: url(../images/products/mobile/ice-coffee.png);
+      background-repeat: no-repeat;
       background-size: contain;
-      background-image: url(../images/products/mobile/milkshake@2.png);
+
+      @media screen and (min-device-pixel-ratio: 2),
+        screen and (min-resolution: 192dpi),
+        screen and (min-resolution: 2dppx) {
+        background-image: url(../images/products/mobile/ice-coffee@2.png);
+      }
     }
   }
-}
 
-.ice-cream {
-  &::before {
-    content: '';
-    position: absolute;
-    top: -210px;
-
-    width: 335px;
-    height: 335px;
-    background-image: url(../images/products/mobile/ice-cream.png);
-    background-repeat: no-repeat;
-  }
-  @media screen and (min-device-pixel-ratio: 2),
-    screen and (min-resolution: 192dpi),
-    screen and (min-resolution: 2dppx) {
+  .milkshake {
     &::before {
-      background-size: contain;
-      background-image: url(../images/products/mobile/ice-cream@2.png);
-    }
-  }
-}
-.ice-coffee {
-  &::before {
-    content: '';
-    position: absolute;
-    top: -210px;
+      content: '';
+      position: absolute;
+      top: -210px;
 
-    width: 335px;
-    height: 335px;
-    background-image: url(../images/products/mobile/ice-coffee.png);
-    background-repeat: no-repeat;
-  }
-  @media screen and (min-device-pixel-ratio: 2),
-    screen and (min-resolution: 192dpi),
-    screen and (min-resolution: 2dppx) {
-    &::before {
+      width: 335px;
+      height: 335px;
+      background-image: url(../images/products/mobile/milkshake.png);
+      background-repeat: no-repeat;
       background-size: contain;
-      background-image: url(../images/products/mobile/ice-coffee@2.png);
-    }
-  }
-}
-.milkshake {
-  &::before {
-    content: '';
-    position: absolute;
-    top: -210px;
 
-    width: 335px;
-    height: 335px;
-    background-image: url(../images/products/mobile/milkshake.png);
-    background-repeat: no-repeat;
-  }
-  @media screen and (min-device-pixel-ratio: 2),
-    screen and (min-resolution: 192dpi),
-    screen and (min-resolution: 2dppx) {
-    &::before {
-      background-size: contain;
-      background-image: url(../images/products/mobile/milkshake@2.png);
+      @media screen and (min-device-pixel-ratio: 2),
+        screen and (min-resolution: 192dpi),
+        screen and (min-resolution: 2dppx) {
+        background-image: url(../images/products/mobile/milkshake@2.png);
+      }
     }
   }
 }
