--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -280,17 +280,52 @@
     line-height: 20px;
     }
   }
+
+  &__nmb{
+    font-family: Titan One;
+    font-size: 28px;
+    line-height: 32px;
+    text-align: right;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    
+    color: #D41443;
+    
+  }
+
+  &__text{
+    display: none;
+    @media screen and(min-width:$tablet){
+      display: block;
+      font-family: DM Sans;
+      font-size: 8px;
+      line-height: 10px;
+      text-align: right;
+
+      color: #FFFFFF;
+    }
+
+  }
+
   &__cafes{
-      display: none;
-      @media screen and(min-width:$tablet){
-        display:block;
-        width: 43px;
-        height: 44px;
-        position: absolute;
-        top: 94px;
-        right: 34px;
-        overflow: hidden;
-        z-index: 10;
+      
+      // @media screen and(min-width:$tablet){
+      //   display: block;
+      //   font-family: DM Sans;
+      //   font-size: 8px;
+      //   line-height: 10px;
+      //   text-align: right;
+
+      //   color: #FFFFFF;
+
+        // display:block;
+        // width: 43px;
+        // height: 44px;
+        // position: absolute;
+        // top: 94px;
+        // right: 34px;
+        // overflow: hidden;
+        // z-index: 10;
         // &::before{
         //   content: "";
         //   display: inline-block;
@@ -302,7 +337,7 @@
         //   left: 0;
         //   z-index: 1;
         // }
-      }
+      // }
       @media screen and(min-width:$desktop){
         display:block;
         width: 72px;
@@ -315,12 +350,20 @@
     &__trucks{
       display: none;
       @media screen and(min-width:$tablet){
-        display:block;
-        width: 51px;
-        height: 43px;
-        position: absolute;
-        top: 151px;
-        right: 34px;
+        display: block;
+        font-family: DM Sans;
+        font-size: 8px;
+        line-height: 10px;
+        text-align: right;
+
+        color: #FFFFFF;
+
+        // display:block;
+        // width: 51px;
+        // height: 43px;
+        // position: absolute;
+        // top: 151px;
+        // right: 34px;
       }
       @media screen and(min-width:$desktop){
         display:block;
