add css for about and components

--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -1,8 +1,10 @@
 .about-section {
     background-repeat: no-repeat;
-    background-position: 0px 640px;
+    background-size: contain;
+    background-position: left 0px bottom 97px;
     padding-top: 125px;
     padding-bottom: 40px;
+    background-color: #FFF5F6;
 }
 
 .about-section {
@@ -11,6 +13,10 @@
         flex-direction: column;
         align-items: center;
     }
+}
+
+.about-title {
+    margin-bottom: 26px;
 }
 
 .about-img {
@@ -25,6 +31,11 @@
     flex-direction: column;
 }
 
+.about-icon {
+    width: 8px;
+    height: 10px;
+    margin-left: 14px;
+}
 
 .about-section-text-list {
     margin-bottom: 40px;
@@ -90,6 +101,15 @@
         display: flex; 
     }
 
+    .about-title {
+        margin-bottom: 50px;
+    }
+
+    .about-button {
+        font-size: 16px;
+        line-height: 1.31;
+    }
+
     .about-img {
         background-image: url("../../src/images/about/tablet-1.png");
         width: 340px;
@@ -104,6 +124,10 @@
         margin-left: 8px;
         font-size: 14px;
         line-height: 1.76;
+
+        &:last-child {
+            letter-spacing: 0.04em;
+        }
     }
 
     .about-section-text-list {
@@ -123,8 +147,12 @@
 @media screen and (min-width: 1200px) {
     .about-section {
         background-image: url("../../src/images/about/desktop-2.png");
-        background-position: 0px 230px;
+        background-position: left 0px bottom 0px;
         padding-bottom: 40px;
+    }
+
+    .about-title {
+        margin-bottom: 55px;
     }
 
     .about-img {
@@ -143,6 +171,11 @@
         letter-spacing: 0.04em;
         margin-left: 0px;
 
+        &:last-child {
+            font-size: 14px;
+            line-height: 1.94;
+        }
+
         &:not(:last-child) {
             margin-bottom: 35px;
         }
@@ -154,5 +187,13 @@
 
     .about-text {
         margin-left: 30px;
+    }
+
+    .about-button {
+        cursor: pointer;
+
+        &:hover {
+            background-color: #ECEBEB;
+        }
     }
 }
