--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -22,3 +22,7 @@
 @import './layout/customer_reviews';
 @import './layout/contacts';
 @import './layout/footer';
+
+// components
+@import "./components/label-title";
+@import "./components/title";
