finish is not too far

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -28,10 +28,17 @@
             alt="milk-decanter"
         /></picture>
 
-        <p class="hero-paragraph">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et
-        </p>
+        <div class="hero-paragraph-wrapper">
+          <p class="hero-paragraph">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et
+          </p>
+          <button class="button hero-button" type="button">
+            <svg class="hero-button-icon">
+              <use href="./images/icon-sprite.svg#icon-go"></use>
+            </svg>
+          </button>
+        </div>
       </div>
     </div>
 
