--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -143,25 +143,6 @@
   }
 }
 
-.cream {
-  background: var(--pink);
-
-  &::before {
-    content: '';
-
-    background-image: url('../images/2-products/320-icecream.png');
-
-    @media screen and (min-width: 768px) {
-      background-image: url('../images/2-products/768-icecream.png');
-    }
-
-    @media screen and (min-width: 1280px) {
-      background-image: url('../images/2-products/1200-icecream.png');
-    }
-  }
-
-}
-
 .cream:hover:before,
 .coffee:hover:before,
 .shakes:hover:before {
@@ -179,6 +160,51 @@
   }
   
 }
+
+.cream {
+  background: var(--pink);
+
+  &::before {
+    content: '';
+
+    @media screen and (max-width: 767px) {
+    background-image: url('../images/2-products/320-icecream.png');
+
+    @media screen and (min-device-pixel-ratio: 2) and (max-width: 767px),
+      screen and (min-resolution: 192dpi) and (max-width: 767px),
+      screen and (min-resolution: 2dppx) and (max-width: 767px) {
+      background-image: url('../images/2-products/320-icecream@2x.png');
+    }
+    @media screen and (min-device-pixel-ratio: 3) and (max-width: 767px),
+      screen and (min-resolution: 288dpi) and (max-width: 767px),
+      screen and (min-resolution: 3dppx) and (max-width: 767px) {
+      background-image: url('../images/2-products/320-icecream@3x.png');
+    }
+  }
+
+    @media screen and (min-width: 768px) {
+      background-image: url('../images/2-products/768-icecream.png');
+
+      @media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
+      screen and (min-resolution: 192dpi) and (min-width: 768px),
+      screen and (min-resolution: 2dppx) and (min-width: 768px) {
+      background-image: url('../images/2-products/768-icecream@2x.png');
+    }
+    @media screen and (min-device-pixel-ratio: 3) and (min-width: 768px),
+      screen and (min-resolution: 288dpi) and (min-width: 768px),
+      screen and (min-resolution: 3dppx) and (min-width: 768px) {
+      background-image: url('../images/2-products/768-icecream@3x.png');
+    }
+    }
+  
+
+    @media screen and (min-width: 1280px) {
+      background-image: url('../images/2-products/1200-icecream.png');
+    }
+  }
+
+}
+
 
 .coffee {
   background: #f0d1a5;
