--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -3,7 +3,7 @@
 .contacts-section {
   background-color: var(--bg-color-light);
   padding-bottom: 113px;
-  background-image: linear-gradient(#ffffff 84px,#fff5f6 84px );
+  background-image: linear-gradient( var(--text-color-dark-bg) 84px, var(--bg-color-light) 84px );
 }
 
 .contacts-list {
