fix contacts and about

--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -3,18 +3,13 @@
   background: #fff5f6;
   margin-top: 170px;
   // position: relative;
+
+  & .container {
+    position: relative;
+    bottom: 84px;
+  }
 }
-.contacts-container {
-  // min-width: 320px;
-  // Можно вернуть, убрал чтобы ужималось при <320-768 как в футере 
-  margin: 0 auto;
-  position: relative;
-  bottom: 84px;
-  // position: absolute;
-  // top: -84px; 
-  //Пробовал абсолютом - заезжает на соседние секции. + 
-  // На список карточек вешал тоже релатив вообще непонятно что получается. ХЗ
-}
+
 .contacts-item {
   max-width: 220px;
 
