вніс деякі зміни

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,50 +1,48 @@
 <header class="page-header">
-  <nav class="site-nav">
-    <a href="" class="site-nav-logo link">
-      <svg class="logo-icon">
-        <use class="" href="./images/sprite/sprite_projects.svg#icon_logo"></use>
+  <div class="container">
+    <nav class="site-nav">
+      <a href="" class="site-nav-logo link">ICECREAM</a>
+      <ul class="site-nav-list list">
+        <li class="site-nav-item"><a href="#" class="site-nav-link link">Home</a></li>
+        <li class="site-nav-item"><a href="#" class="site-nav-link link">About us</a></li>
+        <li class="site-nav-item"><a href="#" class="site-nav-link link">How it's made?</a></li>
+        <li class="site-nav-item"><a href="#" class="site-nav-link link">Our products</a></li>
+        <li class="site-nav-item"><a href="#" class="site-nav-link link">Contact</a></li>
+      </ul>
+    </nav>
+
+    <!-- burger btn -->
+    <button class="burger-btn" type="button">
+      <svg class="burger-btn-icon">
+        <use href="./images/sprite/sprite_projects.svg#icon-burger"></use>
       </svg>
-      <span>ICECREAM</span>
-    </a>
-    <ul class="site-nav-list">
-      <li class="site-nav-item"><a href="#" class="site-nav-link link">Home</a></li>
-      <li class="site-nav-item"><a href="#" class="site-nav-link link">About us</a></li>
-      <li class="site-nav-item"><a href="#" class="site-nav-link link">How it's made?</a></li>
-      <li class="site-nav-item"><a href="#" class="site-nav-link link">Our products</a></li>
-      <li class="site-nav-item"><a href="#" class="site-nav-link link">Contact</a></li>
-    </ul>
-  </nav>
+    </button>
 
-  <!-- burger btn -->
-  <button class="burger-btn" type="button">
-    <svg>
-      <use href="./images/sprite/sprite_projects.svg#close_burger/"></use>
-    </svg>
-  </button>
-
-  <button class="mdl-btn" type="button">
-    <span class="mdl-btn-text">Buy now</span>
-    <svg class="mdl-btn-icon">
-      <use href="#"></use>
-    </svg></button>
-
-  <!-- MOBILE MENU -->
-  <div class="mobile-menu">
-    <button class="close-btn" type="button">
-      <svg class="close_burger" width="40" height="40">
-        <use href="./images/sprite/sprite_projects.svg#icon-close"></use>
-      </svg></button>
     <button class="mdl-btn" type="button">
       <span class="mdl-btn-text">Buy now</span>
       <svg class="mdl-btn-icon">
         <use href="#"></use>
       </svg></button>
-    <ul class="menu-nav-list">
-      <li class="menu-nav-item"><a href="#" class="menu-nav-link link">Home</a></li>
-      <li class="menu-nav-item"><a href="#" class="menu-nav-link link">About us</a></li>
-      <li class="menu-nav-item"><a href="#" class="menu-nav-link link">How it's made?</a></li>
-      <li class="menu-nav-item"><a href="#" class="menu-nav-link link">Our products</a></li>
-      <li class="menu-nav-item"><a href="#" class="menu-nav-link link">Contact</a></li>
-    </ul>
+
+    <!-- MOBILE MENU -->
+    <div class="mobile-menu">
+      <button class="close-btn" type="button">
+        <svg class="close_burger" width="40" height="40">
+          <use href="./images/sprite/sprite_projects.svg#icon-close"></use>
+        </svg></button>
+      <button class="mdl-btn" type="button">
+        <span class="mdl-btn-text">Buy now</span>
+        <svg class="mdl-btn-icon">
+          <use href="#"></use>
+        </svg></button>
+      <ul class="menu-nav-list list">
+        <li class="menu-nav-item"><a href="#" class="menu-nav-link link">Home</a></li>
+        <li class="menu-nav-item"><a href="#" class="menu-nav-link link">About us</a></li>
+        <li class="menu-nav-item"><a href="#" class="menu-nav-link link">How it's made?</a></li>
+        <li class="menu-nav-item"><a href="#" class="menu-nav-link link">Our products</a></li>
+        <li class="menu-nav-item"><a href="#" class="menu-nav-link link">Contact</a></li>
+      </ul>
+    </div>
   </div>
+
 </header>
