--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -60,12 +60,14 @@
                 <p class="hero__lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
                 <div class="hero__cafes">
                     <span class="hero__nmb">16</span>
-                    <p>cafes</p>
+                    <p class="hero__text">cafes</p>
                 </div>
+                <div class="hero__small-elipse hero__small-elipse--cafes"></div>
                 <div class="hero__trucks">
                    <p class="hero__nmb">23</p> 
-                <p>food trucks</p>
+                <p class="hero__text">food trucks</p>
                 </div>
+                <div class="hero__small-elipse hero__small-elipse--trucks"></div>
             </div>
         </div>
         </div>
