--- a/src/sass/layout/_customer_reviews.scss
+++ b/src/sass/layout/_customer_reviews.scss
@@ -16,6 +16,7 @@
   margin-top: 80px;
   margin-bottom: 86px;
 }
+
 .customer-reviews__text-review {
   font-size: 12px;
   background-color: var(--bg-feedback);
@@ -25,8 +26,17 @@
   padding-bottom: 26px;
   padding-left: 86px;
   padding-right: 77px;
-  text-decoration: underline 1px solid #e1e1e1;
+
+
 }
+
+.customer-reviews__text-review-lines{
+	display: inline;
+	background-repeat: no-repeat;
+	background-position: center bottom 1px;
+	background-size: 100% 1px;
+	background-image: linear-gradient(to top, #e1e1e1, #e1e1e1);}
+
 .customer-reviews__text-about {
   font-size: 14px;
   line-height: 2.58;
@@ -36,9 +46,7 @@
   display: flex;
   position: absolute;
   content: '';
-  height: 2px;
-  width: 100px;
-  text-decoration: underline 5px solid #e1e1e1;
+
 }
 
 .customer-reviews__heading {
