--- a/src/partials/customer_reviews.html
+++ b/src/partials/customer_reviews.html
@@ -16,7 +16,7 @@
                     alt="Black-girl" />
             </picture>
             <div class="customer-reviews__text">
-                <p class="customer-reviews__text-review"><span class="customer-reviews__text-review-lines"></span>Nullam viverra consectetuer. Quisque cursus et, porttitor
+                <p class="customer-reviews__text-review"><span class="customer-reviews__text-review-lines">Nullam viverra consectetuer. Quisque cursus et, porttitor
                     risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan
                     congue. Lorem ipsum primis in nibh vel risus.</span></p>
                 <div class="customer-reviews__scroll-dots">
