locations добавил градиент на моб и таблет

--- a/src/sass/layout/_locations.scss
+++ b/src/sass/layout/_locations.scss
@@ -1,7 +1,7 @@
 .locations {
         padding-top: 86px;
         padding-bottom: 113px;
-        background-color: var(--second-bgc);
+        background-image: linear-gradient(to top, var(--second-bgc) 90%, var(--second-bgc) 90%, var(--light-text-color) 10%);
 
     @media screen and (min-width: 768px) {
         padding-top: 119px;
@@ -174,6 +174,11 @@
 
 
 @media screen and (min-width: $tablet) {
+    .locations {
+        background-image: linear-gradient(to top, var(--second-bgc) 79%, var(--second-bgc) 79%, var(--light-text-color) 21%);
+    }
+
+
     .locations__list {        
         flex-direction: row;
     }
@@ -251,6 +256,7 @@
 
 @media screen and (min-width: $desktop) {
      .locations {
+        background-color: var(--second-bgc);
         background-image: url('../images/svg/bgi-locations.svg');
         background-repeat: no-repeat;
         background-size: contain;
