--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -73,7 +73,7 @@
                     type="image/webp">
                     <source 
                     srcset="./images/2-hero/mobi/icecream-mobile.png 1x, ./images/2-hero/mobi/icecream-mobile@2x.png 2x" >
-                    <img class="hero__icecream" src="./images/2-hero/mobi/icecream-mobile.png" alt="Icecream">
+                    <img class="hero__icecream animate__zoomInDown" src="./images/2-hero/mobi/icecream-mobile.png" alt="Icecream">
                 </picture>
             </div>
 
@@ -91,7 +91,7 @@
                 <source 
                 srcset="./images/2-hero/tablet/milk-tablet.png 1x, ./images/2-hero/tablet/milk-tablet@2x.png 2x" 
                 media="(min-width: 768px)">
-                <img class="hero__milk" src="./images/2-hero/tablet/milk-tablet.png" alt="jug with milk">
+                <img class="hero__milk animate__bounceInLeft" src="./images/2-hero/tablet/milk-tablet.png" alt="jug with milk">
             </picture>
 
             <picture>
@@ -108,7 +108,7 @@
                 <source 
                 srcset="./images/2-hero/tablet/wooman-tablet.png 1x, ./images/2-hero/tablet/wooman-tablet@2x.png 2x" 
                 media="(min-width: 768px)">
-                <img class="hero__wooman" src="./images/2-hero/tablet/wooman-tablet.png" alt="wooman with icecream">
+                <img class="hero__wooman animate__slideInLeft" src="./images/2-hero/tablet/wooman-tablet.png" alt="wooman with icecream">
             </picture>
     </div>
 </section>
