--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -89,7 +89,7 @@
   position: absolute;
   top: 8px;
   left: 81px;
-
+  animation-duration: 1500ms;
 
   @media screen and (min-width: $tablet) {
     left: 340px;
@@ -110,6 +110,7 @@
       position: absolute;
       left: 0;
       top: 208px;
+      animation-duration: 1000ms;
     }
 
     @media screen and (min-width: $desktop) {
@@ -126,6 +127,8 @@
         position: absolute;
         bottom: -34px;
         right: 0;
+        animation-duration: 1500ms;
+        animation-delay: 500ms;
       }
 
     @media screen and (min-width: $desktop) {
