вніс зміни до логотипу

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,14 +1,16 @@
 <header class="page-header">
   <div class="container">
     <nav class="site-nav">
-      <a href="" class="site-nav-logo link">ICECREAM</a>
-      <ul class="site-nav-list list">
+      <a href="" class="site-nav-logo link"><img src="./images/img-header/logo.png" alt="" class="logo-img">
+        <span class="logo-name">ICECREAM</span>
+      </a>
+      <!-- <ul class="site-nav-list list">
         <li class="site-nav-item"><a href="#" class="site-nav-link link">Home</a></li>
         <li class="site-nav-item"><a href="#" class="site-nav-link link">About us</a></li>
         <li class="site-nav-item"><a href="#" class="site-nav-link link">How it's made?</a></li>
         <li class="site-nav-item"><a href="#" class="site-nav-link link">Our products</a></li>
         <li class="site-nav-item"><a href="#" class="site-nav-link link">Contact</a></li>
-      </ul>
+      </ul> -->
     </nav>
 
     <!-- burger btn -->
@@ -25,7 +27,7 @@
       </svg></button>
 
     <!-- MOBILE MENU -->
-    <div class="mobile-menu">
+    <!-- <div class="mobile-menu">
       <button class="close-btn" type="button">
         <svg class="close_burger" width="40" height="40">
           <use href="./images/sprite/sprite_projects.svg#icon-close"></use>
@@ -42,7 +44,7 @@
         <li class="menu-nav-item"><a href="#" class="menu-nav-link link">Our products</a></li>
         <li class="menu-nav-item"><a href="#" class="menu-nav-link link">Contact</a></li>
       </ul>
-    </div>
+    </div> -->
   </div>
 
 </header>
