--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -62,7 +62,7 @@
         </ul>
         <ul class="contacts-button">
             <li class="contacts-button-item">
-                <button type="submit" class="button-location button">Our Locations &ensp;&#10095;
+                <button type="submit" class="button-location button modal-btn">Our Locations &ensp;&#10095;
                 </button>
             </li>
             <li class="contacts-button-item">
