--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -239,9 +239,12 @@
   }
 
   .contacts {
-    background-image: linear-gradient
-    (to bottom, rgba(255, 255, 255, .5), rgba(255, 245, 246, .3)),
-   url(../images/sectionbg.png);
+    background-image: linear-gradient(to bottom, rgba( 255, 255, 255, 0.4),
+     rgba(255, 245, 246, 0.4)),url(../images/sectionbg.png);
+    background-color: transparent;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
   
   }
   
