Додає стилі на tab i desktop

--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -68,7 +68,7 @@
     fill: currentColor;
   }
 
-  &__contakt-tel{
+  &__contact-tel{
     display: flex;
     justify-content:flex-end;
     font-weight: 700;
@@ -77,7 +77,8 @@
     color: var(--color-design-black);
   }
 
-  &__contakt-link{
+  &__contact-link{
+    margin-left: 3px;
     color:var(--color-design-main);
   }
 
@@ -126,7 +127,7 @@
       letter-spacing: 0.06em;
     }
 
-    &__contakt-tel{
+    &__contact-tel{
       flex-wrap: wrap;
       font-size: 14px;
       line-height: 1,857;
@@ -146,6 +147,38 @@
 
     &__copyright{
       min-height:73px;
+    }
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .footer{
+    .container{
+      margin: bottom 97px;
+    }
+
+    &__text{
+      max-width:475px;
+    }
+
+    &__text-title{
+      font-size: 30px;
+      line-height: 1.133;
+      margin-bottom:15px;
+    }
+
+    &__text-slog{
+      font-size: 58px;
+      line-height: 1.138;
+      letter-spacing: 0.06em;
+    }
+
+    &__social{
+      margin-bottom:50px;
+    }
+
+    &__copyright{
+      min-height:49px;
     }
   }
 }
