--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-  <div class="container outline">
+  <div class="container">
     <div class="footer__wrapper">
       <div class="footer__slogan">
         <p class="subtitle">homemade ice cream made</p>
