--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -45,15 +45,9 @@
 
 .footer .subtitle {
   margin-bottom: 17px;
-
-  font-family: Titan One;
-  font-weight: 400;
   font-size: 18px;
   line-height: 1.16;
-  text-transform: uppercase;
-
-  color: var(--text-label-color);
-
+ 
   @media screen and(min-width: $tablet) {
     font-size: 26px;
     line-height: 1.15;
@@ -67,14 +61,10 @@
 }
 
 .footer .title {
-  font-family: Titan One;
-  font-weight: 400;
+  
   font-size: 34px;
-  line-height: 39px;
+  line-height: 1.147;
   letter-spacing: 0.04em;
-  text-transform: uppercase;
-
-  color: var(--accent-primary-color);
 
   @media screen and(min-width: $tablet) {
     font-size: 48px;
@@ -85,7 +75,6 @@
   @media screen and(min-width: $desktop) {
     font-size: 58px;
     line-height: 1.4;
-    text-transform: uppercase;
   }
 }
 
@@ -95,8 +84,7 @@
 }
 
 .social-networks__item:not(:last-child) {
-  margin-right: 28px;
-  margin-bottom: 46px;
+  margin-right: 28px; 
 }
 
 .social-networks__btn {
@@ -119,8 +107,18 @@
 }
 
 .footer__contacts--wrapper{
-  max-width: 230px;
+  margin-top: 46px;
+  width: 230px;
   margin-left: auto;
+
+   @media screen and(min-width: $tablet) {
+    width: 268px;
+   }
+
+   @media screen and(min-width: $desktop) {
+     margin-top: 50px;
+     width: 319px;
+   }
 }
 
 .footer__contacts--appeal {
