Скрипт для Никиты закоментирован

--- a/src/sass/layout/_customer_reviews.scss
+++ b/src/sass/layout/_customer_reviews.scss
@@ -1,6 +1,11 @@
 .customer-reviews__photo {
   margin-bottom: 30px;
 }
+
+.customer-reviews__wrappers {
+  background-color: transparent;
+}
+
 .customer-reviews__wrapper,
 .customer-reviews__text {
   font-family: var(--text-font);
