--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -225,20 +225,28 @@ transition: background-color var(--transition-duration) var(--timing-function);
   max-width: 320px;
   height: 95%;
   max-height: 600px;
-  // overflow-y: scroll;
+  overflow-y: scroll;
   z-index: 100500;
   background-color: var(--bg-feedback);
   border-radius: 4px;
    background-image: url('../images/about/mobile-sectionbg.png');
   transition: transform var(--transition-duration) var(--timing-function);
-
-
   .backdrop-modal.is-hidden & {
     transform: translate(-50%, -50%) scale(0.8);
   }
+
+   @media screen and(min-width:768px){
+    max-width: 450px;
+    background-image: url('../images/about/desktop-sectionbg.png');
+  }
+   @media screen and(min-width:768px){
+    max-width: 550px;
+   
+  }
 }
+
 .modal-content{
-  // overflow-y: scroll;
+overflow-y: scroll;
 }
 .modal-close{
   position: absolute;
@@ -249,7 +257,7 @@ transition: background-color var(--transition-duration) var(--timing-function);
   cursor: pointer;
   border-radius: 50%;
   border: 1px solid rgba(0, 0, 0, 0.1);
-  overflow-y: scroll;
+  // overflow-y: scroll;
   background-color: var(--bg-feedback);
   transition: fill var(--transition-duration) var(--timing-function);
   &:hover,
@@ -275,7 +283,13 @@ animation-name: mymove;
   100% {top: 200px; background-image: url('../images/about/mobile-sectionbg.png'); width: 150px;}
 }
 .modal-description{
+  align-items: center;
   max-width: 280px;
   margin: auto;
-
+ @media screen and(min-width:768px){
+    max-width: 400px;
+ }
+ @media screen and(min-width:1280px){
+    max-width: 500px;
+}
 }
