--- a/src/partials/locations.html
+++ b/src/partials/locations.html
@@ -11,11 +11,11 @@
                 <ul class="schedule">
                     <li class="schedule__item">
                         <p class="schedule__days">Monday - Friday</p>
-                        <time class="schedule__time">06:00 AM - 10:00 PM</time>
+                        <p class="schedule__time">06:00 AM - 10:00 PM</p>
                     </li>
                     <li class="schedule__item">
                         <p class="schedule__days">Saturday - Sunday</p>
-                        <time class="schedule__time">08:00 AM - 16:00 PM</time>
+                        <p class="schedule__time">08:00 AM - 16:00 PM</p>
                     </li>
                 </ul>
 
@@ -37,11 +37,11 @@
                 <ul class="schedule">
                     <li class="schedule__item">
                         <p class="schedule__days">Monday - Friday</p>
-                        <time class="schedule__time">06:00 AM - 10:00 PM</time>
+                        <p class="schedule__time">06:00 AM - 10:00 PM</p>
                     </li>
                     <li class="schedule__item">
                         <p class="schedule__days">Saturday - Sunday</p>
-                        <time class="schedule__time">08:00 AM - 16:00 PM</time>
+                        <p class="schedule__time">08:00 AM - 16:00 PM</p>
                     </li>
                 </ul>
 
@@ -63,11 +63,11 @@
                 <ul class="schedule">
                     <li class="schedule__item">
                         <p class="schedule__days">Monday - Friday</p>
-                        <time class="schedule__time">06:00 AM - 10:00 PM</time>
+                        <p class="schedule__time">06:00 AM - 10:00 PM</p>
                     </li>
                     <li class="schedule__item">
                         <p class="schedule__days">Saturday - Sunday</p>
-                        <time class="schedule__time">08:00 AM - 16:00 PM</time>
+                        <p class="schedule__time">08:00 AM - 16:00 PM</p>
                     </li>
                 </ul>
 
