--- a/src/partials/testimonials.html
+++ b/src/partials/testimonials.html
@@ -1,5 +1,6 @@
 <section class="swiper">
   <div class="swiper-container">
+    <h2 class="title visually-hidden">Testimonials</h2>
     <div class="swiper-wrapper">
       <div class="swiper-slide">
         <div class="slider-block">
