--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,5 +1,6 @@
 <section class="gallery">
     <div class="container">
+        <h2 class="title visually-hidden">Gallery</h2>
         <div class="gallery__thumb">
                 <div class="gallery__wrapper">
                     <picture class="gallery__item">
