--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -28,11 +28,13 @@
     background-image: url(../images/4-about/desktop/milk-1200-1x.png);
     background-repeat: no-repeat;
     background-size: contain;
+    background-position: center;
   
   @media screen and (min-device-pixel-ratio: 2),
     screen and (min-resolution: 192dpi),
     screen and (min-resolution: 2dppx) {
       background-image: url(../images/4-about/desktop/milk-1200-2x.png);
+      
     }
   }
 }
@@ -82,7 +84,7 @@
 }
 
 .about__motto {
-    font-family: DM Sans;
+    font-family: $ff-main;
     font-weight: 500;
     letter-spacing: 0em;
     text-align: left;
@@ -105,7 +107,7 @@
 }
 
 .about__thumb-image {
-  font-family: DM Sans;
+  font-family: $ff-main;
   font-weight: 500;
   color:var(--copyright-text-color); 
   font-size: 12px;
