--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -122,7 +122,7 @@
 }
 
 .footer__contacts--appeal {
-  font-family: DM Sans;
+  font-family: $ff-main;
   font-weight: 700;
   font-size: 12px;
   line-height: 1.86;
@@ -181,7 +181,7 @@
 }
 
 .footer__copyright--text {
-  font-family: DM Sans;
+  font-family: $ff-main;
 
   font-weight: 700;
   font-size: 14px;
